traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:23: error: not found: value esFaceMur
                                                      if(!esFaceMur()){avance();gauche()}}
                                                          ^